--- a/i_add_field_gastos/views/inherit_gastos_view_from.xml
+++ b/i_add_field_gastos/views/inherit_gastos_view_from.xml
@@ -17,7 +17,7 @@
                 </xpath>
                 <xpath expr="//field[@name='date']" position="after">
                     <field name="fecha_pago_id"/>
-                    <field name="purchase_order_id"/>
+                   <!--  <field name="purchase_order_id"/> -->
                 </xpath>
             </field>
         </record>
