--- a/i_add_field_gastos/views/inherit_gastos_view_tree.xml
+++ b/i_add_field_gastos/views/inherit_gastos_view_tree.xml
@@ -11,7 +11,7 @@
                 </xpath>
                 <xpath expr="//field[@name='fecha_pago_id']" position="after">
                     <field name="proveedor_id"/>
-                    <field name="purchase_order_id"/>
+                    <!-- <field name="purchase_order_id"/> -->
                     <field name="sucursal_id"/>
                     <field name="departamento_id"/>
                     <field name="diferencia_id" sum = " TotalP  "/>
