--- a/i_ticktes_invetario_sistemas/views/view_equipo_computadora.xml
+++ b/i_ticktes_invetario_sistemas/views/view_equipo_computadora.xml
@@ -116,12 +116,25 @@
         </record>
 
 
-        <act_window
+       <!--  <act_window
             id="action_menu_computer"
             name="EQUIPOS"
             res_model="team.computer"
             view_mode="kanban,list,form"
-        />
+        /> -->
+
+        <record id="action_menu_computer" model="ir.actions.act_window">
+            <field name="name">EQUIPOS</field>
+            <field name="res_model">team.computer</field>
+            <field name="view_mode">kanban,tree,form</field>
+            <field name="help" type="html">
+              <p class="o_view_nocontent_smiling_face">
+                Create a new
+              </p><p>
+                
+              </p>
+            </field>
+        </record>
 
 
 
