edit-attachment_id

--- a/w_document_mod/report/_inherit_account_invoice_report_templates.xml
+++ b/w_document_mod/report/_inherit_account_invoice_report_templates.xml
@@ -356,7 +356,7 @@
                         <div class="col col-9">
                             <div class="row" style="font-size: 12px;font-family: 'Courier New', Courier, monospace;">
                                 <div class="col-4" style="padding-bottom: 5px;">
-                                    <b><span>Forma Dde Pago</span></b>
+                                    <b><span>Forma de Pago</span></b>
                                 </div>
                                 <div class="col-4" style="padding-bottom: 5px;">
                                     <b><span>Método de Pago</span></b>
